--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <a href="https://www.facebook.com/SKLuasong" target="_blank"><i class="fab fa-facebook"></i> Facebook SK Luasong</a>
             <a href="https://docs.google.com/spreadsheets/u/1/d/1TmiltqbE1ND74_qebhd-Hdfe_XPbWVhoxhIYeISvnqU/edit?usp=sharing" target="_blank"><i class="fas fa-file-alt"></i> Laporan Kedatangan Harian 2025/2026</a>
             <a href="https://docs.google.com/spreadsheets/d/1VPqgu7YYTEUSmObG4c2MNXiSJW7UWrUCpdDR5fRv6qY/edit?gid=1092882464#gid=1092882464" target="_blank"><i class="fas fa-book"></i> Guru Bertugas Mingguan</a>
+            <a href="https://momon-ux.github.io/usahakuncikejayaan/" target="_blank"><i class="fas fa-book"></i> SKPM k@s</a>
         </div>
     </nav>
 
