--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <nav>
         <div class="link-container" id="linkContainer">
             <a href="https://apdm.moe.gov.my/" target="_blank"><i class="fas fa-book"></i> APDM</a>
-            <a href="file:///C:/Users/makmal.2-6985_moe-dl/Desktop/kehadiran/apdm.index.html"><i class="fas fa-book"></i> Kehadiran APDM</a>
+            <a href="https://momon-ux.github.io/kehadiran/" target="_blank"><i class="fas fa-book"></i> Analisis Data Hadir APDM</a>
             <a href="https://idme.moe.gov.my/login" target="_blank"><i class="fas fa-id-card"></i> iDMe</a>
             <a href="https://appsjohor.moe.gov.my/rmt/" target="_blank"><i class="fas fa-id-card"></i> Guru Bertugas RMT</a>
             <a href="https://ssdm.moe.gov.my/?t=123" target="_blank"><i class="fas fa-id-card"></i> SSDM</a>
