--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
     </style>
 </head>
 <body>
+        <video class="background-video" autoplay loop muted>
+        <source src="IMG_8960 (2).mp4" type="video/mp4">
+    </video>
     <header>
 
         <div>
