--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/js/all.min.js"></script>
     <style>
+                <video class="background-video" autoplay loop muted>
+        <source src="ceria.mp4" type="video/mp4">
+    </video>
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -76,7 +79,7 @@
 </head>
 <body>
         <video class="background-video" autoplay loop muted>
-        <source src="IMG_8960 (2).mp4" type="video/mp4">
+        <source src="ceria.mp4" type="video/mp4">
     </video>
     <header>
 
